--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,12 @@
 .App {
   text-align: center;
+  width: 100vw !important;
+  height: 100vh !important;
+  background-color: #DFE6ED;
+  display: flex;
+  /* align-items: center; */
+  justify-content: center;
+  overflow-x: hidden;
 }
 
 .App-logo {
